--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 .idle_block {
     align-items: center;
 }
+
+.idle_block.mutually_exclusive_warning {
+    font-size: 0.8em;
+    font-style: italic;
+    text-align: center;
+    margin-bottom: 5px;
+}
